<resources>
    <string name="app_name">Assignment One</string>
    <string name="name_label">Name</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="submit">Submit</string>
</resources>